@@ -2,6 +2,9 @@ tasksel (3.39) UNRELEASED; urgency=medium
 
   * Mention proper locations of *.desc files in tasksel's manpage, based
     on a bug report and patch by Zakhar Volchak (Closes: #824877).
+  * Add support for DEBIAN_TASKS_ONLY to be used in Debian Installer to
+    make sure only tasksel-data tasks are considered (See: #758116,
+    #846002).
 
  -- Cyril Brulebois <kibi@debian.org>  Sat, 24 Dec 2016 02:00:03 +0100
 
